# xdgc

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md
config/compilation_mode/: BUILD.bazel
lib/: BUILD.bazel  libxdgc.c
src/: BUILD.bazel  libxdgc.c
test/: BUILD.bazel  MODULE.bazel  xdgc_test.c
