load("@cc_config//:MACROS.bzl", "repo_paths")

PROD_REPOS = [
    "@liblogc//src:logc",
    "@uthash//src:uthash"
]

repo_paths(
    name = "repo_paths",
    repos = PROD_REPOS
)

repo_paths(
    name = "test_repo_paths",
    repos = PROD_REPOS + [
        "@gopt//src:gopt",
        "@unity//src:unity"
    ]
)
