load("@obazl_tools_cc//rules:module_profiles.bzl",
     "module_profiles")

PROD_REPOS = [
    "@liblogc//src:logc",
    "@uthash//src:uthash"
]

module_profiles(
    name = "module_profiles",
    repos = PROD_REPOS
)

module_profiles(
    name = "test_module_profiles",
    repos = PROD_REPOS + [
        "@gopt//src:gopt",
        "@unity//src:unity"
    ]
)
