module(
    name = "xdgc",
    version = "2.0.0",
    compatibility_level = 2,
    bazel_compatibility = [">=6.0.0"]
)
## bcr deps:
bazel_dep(name = "platforms",      version = "0.0.7")
bazel_dep(name = "bazel_skylib",   version = "1.4.2")

## obazl deps:
bazel_dep(name = "liblogc",      version = "2.0.0")
bazel_dep(name = "makeheaders",  version = "1.2.0")
bazel_dep(name = "obazl_tools_cc", version = "2.0.0")
bazel_dep(name = "uthash",       version = "3.0.0")

## dev dependencies
# bazel_dep(name = "gopt",         version = "10.0.0",
#           dev_dependency = True)

