load("@bazel_skylib//lib:paths.bzl", "paths")
load("@makeheaders//src:RULES.bzl", "makeheaders")
load("@obazl_tools_cc//config/cc:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_LINKOPTS",
     "BASE_LOCAL_DEFINES",
     "module_version")

cc_library(
    name  = "xdgc",
    srcs  = ["libxdgc.c", "mkhdrs"],
    hdrs  = ["xdgc.h"],
    includes = ["."],
    deps  = ["@liblogc//lib:logc",
             "@uthash//lib:uthash"],
    copts = BASE_COPTS,
    local_defines = BASE_LOCAL_DEFINES + module_version(),
    visibility = ["//visibility:public"]
)

############
makeheaders(
    name             = "mkhdrs",
    hdrs_srcs        = ["libxdgc.c"],
    additional_srcs  = select({
        "//config/compilation_mode:fastbuild?": [
            "@makeheaders//logging:ansi_colors.h",
            "@makeheaders//logging:macros_debug.h"
        ],
        "//conditions:default": [
            "@makeheaders//logging:macros_ndebug.h"
        ]
    }),
)

makeheaders(
    name             = "export_hdr",
    out              = "xdgc.h",
    export_interface = True,
    hdrs_srcs        = ["libxdgc.c"],
    visibility       = ["//visibility:public"]
)
