load("@bazel_skylib//lib:paths.bzl", "paths")
load("@makeheaders//src:RULES.bzl", "makeheaders")
load("@obazl_tools_cc//config:BASE.bzl",
     "BASE_COPTS",
     "define_module_version")

###########
cc_library(
    name  = "xdgc",
    srcs  = ["libxdgc.c", ":mkhdrs"],
    hdrs  = ["xdgc.h"],
    includes = ["."],
    implementation_deps  = ["@liblogc//lib:logc",
                            "@uthash//lib:uthash"],
    copts = BASE_COPTS,
    local_defines = define_module_version()
    + select({ # strdup
        "@platforms//os:linux": ["_POSIX_C_SOURCE=200809L"],
        "//conditions:default": []
    }),
    defines = ["PROFILE_$(COMPILATION_MODE)"],
    visibility = ["//visibility:public"]
)

############
makeheaders(
    name             = "mkhdrs",
    hdrs_srcs        = ["libxdgc.c"],
    additional_srcs  = select({
        "@makeheaders//compilation_mode:fastbuild": [
            "@makeheaders//logging:ansi_colors.h",
            "@makeheaders//logging:macros_debug.h"
        ],
        "//conditions:default": [
            "@makeheaders//logging:macros_ndebug.h"
        ]
    }),
)

makeheaders(
    name             = "export_hdr",
    out              = "xdgc.h",
    export_interface = True,
    hdrs_srcs        = ["libxdgc.c"],
    visibility       = ["//visibility:public"]
)
