load("@rules_cc//cc:defs.bzl", "cc_library")
load("@makeheaders//rules:makeheaders.bzl", "makeheaders")
load("@obazl_config_cc//config:BASE.bzl",
     "BASE_COPTS", "define_module_version")

###########
cc_library(
    name  = "xdgc",
    srcs  = ["libxdgc.c", ":mkhdrs"],
    hdrs  = ["xdgc.h"],
    includes = ["."],
    implementation_deps  = ["@liblogc//lib:logc",
                            "@uthash//lib:uthash"],
    copts = BASE_COPTS,
    local_defines = define_module_version()
    + select({ # strdup
        "@platforms//os:linux": ["_POSIX_C_SOURCE=200809L"],
        "//conditions:default": []
    }),
    defines = ["PROFILE_$(COMPILATION_MODE)"],
    visibility = ["//visibility:public"]
)

############
makeheaders(
    name             = "mkhdrs",
    hdrs_srcs        = ["libxdgc.c"],
    additional_srcs  = select({
        "@obazl_config_cc//compilation_mode:fastbuild?": [
            "@liblogc//macros:ansi_colors.h",
            "@liblogc//macros:logging_debug.h"
        ],
        "//conditions:default": [
            "@liblogc//macros:logging_ndebug.h"
        ]
    }),
)

makeheaders(
    name             = "export_hdr",
    out              = "xdgc.h",
    export_interface = True,
    hdrs_srcs        = ["libxdgc.c"],
    visibility       = ["//visibility:public"]
)
