load("@makeheaders//src:RULES.bzl", "makeheaders")

cc_library(
    name  = "xdgc",
    srcs  = ["libxdgc.c", "mkhdrs"],
    hdrs  = ["xdgc.h"],
    deps  = ["@liblogc//src:logc",
             "@uthash//src:uthash"],
    copts = [
        "-x", "c",
        "-O3",
        "-Wno-unused-function",
        "-I$(@liblogc)/src",
        "-I$(@uthash)/src",
        "-I$(GENDIR)/$(@)/src"
    ] + select({
        "@platforms//os:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }),
    toolchains = ["//:repo_paths"],
    visibility = ["//visibility:public"]
)

############
makeheaders(
    name             = "mkhdrs",
    hdrs_srcs        = ["libxdgc.c"],
)

makeheaders(
    name             = "export_hdr",
    out              = "xdgc.h",
    export_interface = True,
    hdrs_srcs        = ["libxdgc.c"],
    visibility       = ["//visibility:public"]
)

