load("@makeheaders//src:RULES.bzl", "makeheaders")

load("@cc_config//:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_LINKOPTS")

TOOLCHAINS = ["//:test_repo_paths"]

################################################################
# test_suite(
#     name  = "test",
#     tests = [
#     ]
# )

cc_binary(
    name  = "xdgc_test",
    linkstatic = 1,
    srcs  = ["xdgc_test.c", ":mkhdrs"],
    deps  = ["@liblogc//src:logc",
             "@uthash//src:uthash",
             "//src:xdgc"],
    copts = BASE_COPTS + [
        "-I$(GENDIR)/$(@)/test",
        "-I$(@liblogc)/src",
        "-I$(@uthash)/src"
    ],
    toolchains = TOOLCHAINS,
)

################################################################
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "xdgc_test.c",
    ],
    additional_srcs = [
        "//src:xdgc.h",
    ],
)
