load("@makeheaders//src:RULES.bzl", "makeheaders")

load("@obazl_tools_cc//config/cc:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_LINKOPTS",
     "BASE_LOCAL_DEFINES")

# TOOLCHAINS = ["//:test_module_profiles"]

################################################################
# test_suite(
#     name  = "test",
#     tests = [
#     ]
# )

cc_binary(
    name  = "xdgc_test",
    linkstatic = 1,
    srcs  = ["xdgc_test.c", ":mkhdrs"],
    deps  = ["@liblogc//lib:logc",
             "@uthash//lib:uthash",
             "//lib:xdgc"],
    copts = BASE_COPTS + [
        "-I$(GENDIR)/test",
    ],
    local_defines = BASE_LOCAL_DEFINES,
)

################################################################
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "xdgc_test.c",
    ],
    additional_srcs = [
        "//lib:xdgc.h",
    ],
)
