load("@makeheaders//src:RULES.bzl", "makeheaders")

load("@obazl_tools_cc//config:BASE.bzl",
     "BASE_COPTS",
     "BASE_LINKOPTS",
     "define_module_version")

cc_binary(
    name  = "xdgc_test",
    linkstatic = 1,
    srcs  = ["xdgc_test.c", ":mkhdrs"],
    deps  = ["@liblogc//lib:logc",
             "@uthash//lib:uthash",
             "//lib:xdgc"],
    copts = BASE_COPTS + [
        "-I$(GENDIR)/test",
    ],
    local_defines = define_module_version(),
    defines = ["PROFILE_$(COMPILATION_MODE)"],
)

################################################################
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "xdgc_test.c",
    ],
    additional_srcs = [
        "//lib:xdgc.h",
    ],
)
