package(default_visibility = ["//visibility:public"])

###############
config_setting(
    name = "dbg?",
    values = {"compilation_mode": "dbg"}
)

config_setting(
    name = "dev?",
    values = {"compilation_mode": "fastbuild"}
)

config_setting(
    name = "fastbuild?",
    values = {"compilation_mode": "fastbuild"}
)

config_setting(
    name = "opt?",
    values = {"compilation_mode": "opt"}
)
